--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>OrbitReport</title>
   <base href="/">
+  
   <style>
     body {
       font-family: 'Helvetica', 'Courier';
@@ -13,8 +14,8 @@
         color: #34495E;
     }
   </style>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
 </head>
 <body>
   <app-root></app-root>
